--- a/XYZReader/src/main/res/values/dimens.xml
+++ b/XYZReader/src/main/res/values/dimens.xml
@@ -27,6 +27,6 @@
         <dimen name="ic_album_overflow_height">30dp</dimen>
         <dimen name="ic_album_overflow_margin_top">10dp</dimen>
 
-
+    <integer name="fragment_details_background_image_fade_millis">1000</integer>
 
 </resources>
