--- a/XYZReader/src/main/res/layout/fragment_article_detail.xml
+++ b/XYZReader/src/main/res/layout/fragment_article_detail.xml
@@ -10,7 +10,7 @@
         android:id="@+id/appbar"
         android:layout_width="match_parent"
         android:layout_height="@dimen/detail_backdrop_height"
-        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark"
         android:fitsSystemWindows="true"
         >
 
@@ -102,9 +102,9 @@
             android:transitionGroup="true">
 
             <TextView
-                android:id="@+id/article_body"
+                android:id="@+id/article"
                 style="?android:attr/textAppearanceMedium"
-                android:textColor="@color/theme_primary_dark"
+                android:textColor="@color/ltgray"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textColorLink="@color/theme_accent"
