--- a/XYZReader/src/main/res/layout/fragment_article_detail.xml
+++ b/XYZReader/src/main/res/layout/fragment_article_detail.xml
@@ -10,7 +10,7 @@
         android:id="@+id/appbar"
         android:layout_width="match_parent"
         android:layout_height="@dimen/detail_backdrop_height"
-        android:theme="@style/ThemeOverlay.AppCompat.Dark"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
         android:fitsSystemWindows="true"
         >
 
@@ -91,7 +91,7 @@
     <android.support.v4.widget.NestedScrollView
         android:id="@+id/scrollView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="627dp"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
         <LinearLayout
@@ -102,20 +102,20 @@
             android:transitionGroup="true">
 
             <TextView
-                android:id="@+id/article"
+                android:id="@+id/article_body"
                 style="?android:attr/textAppearanceMedium"
-                android:textColor="@color/ltgray"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textColorLink="@color/theme_accent"
+                android:layout_marginBottom="@dimen/activity_vertical_margin"
                 android:layout_marginLeft="@dimen/activity_horizontal_margin"
                 android:layout_marginRight="@dimen/activity_horizontal_margin"
-                android:layout_marginBottom="@dimen/activity_vertical_margin"
                 android:layout_marginTop="@dimen/activity_vertical_margin"
-                android:paddingTop="@dimen/activity_vertical_margin"
                 android:autoLink="web"
+                android:lineSpacingMultiplier="@fraction/detail_body_line_spacing_multiplier"
                 android:linksClickable="true"
-                android:lineSpacingMultiplier="@fraction/detail_body_line_spacing_multiplier" />
+                android:paddingTop="@dimen/activity_vertical_margin"
+                android:textColor="@color/ltgray"
+                android:textColorLink="@color/theme_accent" />
         </LinearLayout>
 
     </android.support.v4.widget.NestedScrollView>
