--- a/XYZReader/src/main/res/layout/list_item_article.xml
+++ b/XYZReader/src/main/res/layout/list_item_article.xml
@@ -33,7 +33,7 @@
             android:paddingTop="16dp"
             android:paddingRight="16dp"
             android:paddingBottom="4dp"
-            android:textColor="#FFF"
+            android:textColor="@color/white"
             android:ellipsize="end"
             android:maxLines="4" />
 
