--- a/XYZReader/src/main/res/values/colors.xml
+++ b/XYZReader/src/main/res/values/colors.xml
@@ -17,9 +17,9 @@
 
 <resources>
     <color name="photo_placeholder">#ccc</color>
-
-    <color name="theme_primary">#04561A</color>
-    <color name="theme_primary_dark">#04561A</color>
-    <color name="theme_accent">#04561A</color>
+    <color name="theme_primary">#011066</color>
+    <color name="theme_primary_dark">#00072e</color>
+    <color name="theme_accent">#03DAC6</color>
     <color name="ltgray">#ffe0e0e0</color>
+    <color name="white">#fff</color>
 </resources>
